k8s/demo/staging/namespace.yaml
# overlays/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-staging
  labels:
    name: demo-staging
    environment: demo-staging
