k8s/demo/staging/spire-server-external.yaml
# staging/spire-server-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: spire-server-external
  namespace: demo-staging
  annotations:
    metallb.universe.tf/address-pool: k3s-pool
spec:
  type: LoadBalancer
  selector:
    app: spire-server
  ports:
    - name: grpc
      port: 18081
      protocol: TCP
      targetPort: 8081
